# zon

./: .editorconfig  .eslintrc.json  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  eslint.config.mjs  index.html  package.json  postcss.config.js  tsconfig.base.json  tsconfig.json  tsconfig.test.json  vite.config.ts
.cursor/rules/: Deno.mdc  SolidJS.mdc
.github/workflows/: release.yml
.husky/: pre-commit
docs/: latest.example.json  release.md
docs/notes/: accessibility.md  animation.md  cli.md  color.md  d3.md  glob.md  integration.md  interaction.md  line-counting.md  parcel.md  prior-art.md  project-name.md  rust.md  static-checks.md  style.md  sunburst.md  test.md  tips.md  tree.md
docs/plans/: e2e-happy-path-phased.md
input/: fromTokei.json  redux.json
scripts/: release.ts  version.ts
src/: App.css  App.tsx  Donut.tsx  Sunburst.tsx  index.html  index.test.ts  index.tsx  routes.ts  svg.tsx  vite-env.d.ts
src-cli/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-ui/: index.css  index.tsx
src-ui/App/: App.test.tsx  App.tsx
src-ui/LineView/: LineList.tsx  LineView.test.tsx  LineView.tsx  LineViewBreadCrumbs.tsx  LineViewNode.tsx  color.tsx  config.tsx  partition.tsx
src-ui/SlocView/: SlocList.tsx  SlocView.test.tsx  SlocView.tsx  SlocViewBreadCrumbs.tsx  SlocViewNode.tsx  color.tsx  partition.tsx  zonColoredHierarchy.tsx
src-ui/adapters/: createProject.ts  tokeiAdapter.ts  zonAdapter.ts
(+214 files in other folders)
