[package]
name = "zon"
version = "0.1.0"
authors = ["Thomas van Lankveld <5240626+thomasvanlankveld@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "zon"
path = "src-cli/main.rs"

[dependencies]
warp = "0.2.3"
tokio = { version = "1.8.4", features = ["macros"] }
tokei = "11.2.1"
serde_json = "1.0.53"
colored = "1.9.3"
anyhow = "1.0.31"

[build-dependencies]
anyhow = "1.0.31"
